# xbmc-updater

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: Downloader.cpp  Downloader.h  Updater.cpp  Updater.h  Util.cpp  Util.h  main.cpp
src/filesystem/: HDDirectory.cpp  HDDirectory.h  HDFile.cpp  HDFile.h
src/utils/: CustomLaunch.cpp  CustomLaunch.h  JSONVariantParser.h  StringUtils.cpp  StringUtils.h
